[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-toolkit"
version = "0.2.0"
description = "Zero-dependency CLI for the Slack Web API with 28 Claude Code skills"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "AI Build Lab", email = "tyler@aibuildlab.com" }]
keywords = ["slack", "cli", "api", "claude-code", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.scripts]
slack-cli = "slack_cli.cli:main"

[tool.setuptools.packages.find]
include = ["slack_cli*"]

[tool.setuptools.package-data]
"slack_cli.skills_data" = ["*.md"]
"slack_cli.catalog_data" = ["*.json"]
