[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-toolkit"
version = "0.2.2"
description = "Zero-dependency CLI for the Slack Web API. 306 methods, 33 Claude Code skills, raw API passthrough. Built for AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{ name = "AI Build Lab", email = "tyler@aibuildlab.com" }]
keywords = ["slack", "cli", "api", "claude-code", "ai-agents", "slack-api", "zero-dependencies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/8Dvibes/slack-toolkit"
Repository = "https://github.com/8Dvibes/slack-toolkit"
Issues = "https://github.com/8Dvibes/slack-toolkit/issues"
Changelog = "https://github.com/8Dvibes/slack-toolkit/blob/main/CHANGELOG.md"

[project.scripts]
slack-cli = "slack_cli.cli:main"

[tool.setuptools.packages.find]
include = ["slack_cli*"]

[tool.setuptools.package-data]
"slack_cli.skills_data" = ["*.md"]
"slack_cli.catalog_data" = ["*.json"]
